--- a/src/Cmpnts/Community/CommunityDetail/Comment/Comment.css
+++ b/src/Cmpnts/Community/CommunityDetail/Comment/Comment.css
@@ -19,23 +19,32 @@
     margin-bottom: 2.2rem;
 }
 
+.cmt_profile-wrap > div:nth-child(2){
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    gap: 3.3rem;
+}
+
 .cmt_name{
     color: #000;
-font-family: "Noto Sans";
-font-size: 18px;
-font-style: normal;
-font-weight: 600;
-line-height: normal;
+    font-family: "Noto Sans";
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
 }
 
 .cmt_grade{
     color: #000;
-text-align: center;
-font-family: "Noto Sans";
-font-size: 16px;
-font-style: normal;
-font-weight: 500;
-line-height: normal;
+    display: flex;
+    align-items: center;
+    gap: 0.5vw;
+    font-family: Noto Sans;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
 }
 
 .cmt_select{
@@ -55,14 +64,48 @@ justify-content: center;
 align-items: center;
 }
 
+.cmt_unselect{
+    width: 58px;
+    height: 25px;
+    border-radius: 2px;
+    background-color: #D9D9D9;
+    color: #FFF;
+    text-align: center;
+    font-family: "Noto Sans";
+    font-size: 1.4rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cmt_edit-unselect{
+    width: 58px;
+    height: 25px;
+    border-radius: 2px;
+background: rgba(0, 0, 0, 0.40);
+    color: #FFF;
+    text-align: center;
+    font-family: "Noto Sans";
+    font-size: 1.4rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .cmt_content{
     color: rgba(0, 0, 0, 0.60);
-font-family: "Noto Sans";
-font-size: 16px;
-font-style: normal;
-font-weight: 400;
-line-height: normal;
-margin-bottom: 4rem;
+    font-family: Noto Sans, sans-serif;
+    font-size: 1.6rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-bottom: 4rem;
 }
 
 .cmt_likes-wrap{
