--- a/src/Cmpnts/MentorHomepage/Review/ReviewBlock.css
+++ b/src/Cmpnts/MentorHomepage/Review/ReviewBlock.css
@@ -1,6 +1,6 @@
 .mentroing_review_wrap{
     display: flex;
-    margin-top: 14.4rem;
+    margin-top: 3.2em;
     gap: 1.1vw;
 }
 .review_img_wrap{
@@ -10,7 +10,7 @@
 
 .before_img, .after_img{
     position: relative;
-    width: 35.4rem;
+    width: 18.7vw;
     height: 38.3rem;
     border-radius: 10px;
     background-color: rgba(128, 128, 128, 0.5);
@@ -19,7 +19,7 @@
 }
 
 .before_img>img, .after_img>img{
-    width: 35.4rem;
+    width: 18.7vw;
     height: 38.3rem;
     border-radius: 10px;
 }
@@ -28,7 +28,7 @@
     position: absolute;
     top: 0px;
     left: 0px;
-    width: 35.4rem;
+    width: 18.7vw;
     height: 38.3rem;
     border-radius: 10px;
     background-color: rgba(0, 0, 0, 0.40);
@@ -97,7 +97,57 @@
     font-weight: 400;
     line-height: normal;
 }
+
+.review-block_btn-wrap{
+    display: flex;
+    gap: 3vw;
+}
+
+.review-block_edit-unselect{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 4.6vw;
+    height: 4.3rem;
+    border-radius: 2px;
+    background: rgba(0, 0, 0, 0.40);
+    
+}
+
+.review-block_delete-unselect{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 4.6vw;
+    height: 4.3rem;
+    border-radius: 2px;
+    background: #D9D9D9;
+}
+
+.review-block_edit-unselect > div, .review-block_delete-unselect > div{
+    color: #FFF;
+    font-family: "Noto Sans";
+    font-size: 2rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.review-block_btn-wrap>div:nth-child(2)>button{
+    border: none;
+    background: #D9D9D9;
+    width: 4.2vw;
+    height: 3.8rem;
+    color: #000;
+    font-family: Noto Sans;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
 .review_detail_btn{
+
     width: 6vw;
     height: 4.28rem;
     border-radius: 5px;
