--- a/src/Styles/pagination.css
+++ b/src/Styles/pagination.css
@@ -3,7 +3,8 @@
     display: flex;
     justify-content: center;
     height: 4.8rem;
-    gap: 1vw
+    gap: 1vw;
+    margin-bottom: 10rem;
 }
 
 .pagination_prevBtn{
