--- a/src/Cmpnts/Header/Styles/NavBar.css
+++ b/src/Cmpnts/Header/Styles/NavBar.css
@@ -7,12 +7,13 @@
 .hd_nav {
     display: flex;
     color: #000;
-text-align: center;
-font-family: "Noto Sans";
-font-size: 14px;
-font-style: normal;
-font-weight: 500;
-line-height: normal;
+  text-align: center;
+  font-family: "Noto Sans";
+  font-size: 1.4rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  cursor: pointer;
 }
 
 .selected{
