--- a/src/Cmpnts/MentiHomepage/Styles/MentiHomepageNavBar.css
+++ b/src/Cmpnts/MentiHomepage/Styles/MentiHomepageNavBar.css
@@ -25,6 +25,7 @@
     font-style: normal;
     font-weight: 500;
     line-height: normal;
+    cursor: pointer;
 }
 .mth-line{
     width: 100%;
@@ -49,4 +50,5 @@ font-size: 20px;
 font-style: normal;
 font-weight: 600;
 line-height: normal;
+cursor: pointer;
 }
