--- a/src/Cmpnts/MentorHomepage/Portfolio/Portfolio.css
+++ b/src/Cmpnts/MentorHomepage/Portfolio/Portfolio.css
@@ -33,8 +33,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 6.4vw;
-    height: 4.6rem;
+    width: 9.5vw;
+    height: 5.9rem;
     border-radius: 5px;
     border: 2px solid #1CA764;
     color: #1CA764;
@@ -44,6 +44,7 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    cursor: pointer;
 }
 
 .pf_styling-contents-wrap{
