--- a/src/Cmpnts/ReviewModal/ReviewModal.css
+++ b/src/Cmpnts/ReviewModal/ReviewModal.css
@@ -5,7 +5,6 @@
     background-color: rgba(0, 0, 0, 0.60);
     width: 100%;
     padding:  20% 19vw 20% 19vw;
-    height: 100%;
 }
 
 .review-create-modal_wrap{
@@ -14,7 +13,7 @@
     top: 0px;
     background-color: rgba(0, 0, 0, 0.60);
     width: 100%;
-    padding:  20% 19vw 20% 19vw;
+    padding: 20% 19vw 20% 19vw;
 }
 
 .modal_content-wrap{
@@ -35,6 +34,7 @@
     object-fit: contain;
     width: 23px;
     height: 23px;
+    cursor: pointer;
 }
 
 .modal_cancel > img{
@@ -99,7 +99,8 @@
     line-height: normal;
     border: none;
     outline: none;
-    margin-bottom: 27.2rem;
+    height: 27.2rem;
+    /* margin-bottom: 27.2rem; */
 }
 
 
