--- a/src/Styles/Block.css
+++ b/src/Styles/Block.css
@@ -1,6 +1,7 @@
 
 .mentoring-block-wrap {
     width: 100%;
+    cursor: pointer;
 }
 .mentoring-block-wrap > *{
     font-size: 1.5rem;
@@ -23,7 +24,7 @@
 .mentoring-block-wrap > div:nth-child(2) { 
     display: flex;
     justify-content: space-between;
-    margin-bottom: 4.5rem;
+    margin-bottom: 2rem;
 }
 
 .mentoring-block-profile-wrap{
